fixup! styling changes to fix collapse caret animation, or a Tale of Two Specificities, or how specificity got the best of me

--- a/lms/static/sass/multicourse/_dashboard.scss
+++ b/lms/static/sass/multicourse/_dashboard.scss
@@ -295,7 +295,7 @@
     @include clearfix();
     @extend %ui-depth2;
     position: relative;
-    padding: ($baseline/2);
+    margin: ($baseline/2);
 
     .details {
       @include clearfix();
@@ -311,7 +311,7 @@
         position: relative;
         max-height: 100%;
         height: 120px;
-        border-radius: ($baseline/10);
+        border-radius: ($baseline/5);
         border: 1px solid $dashboard-course-cover-border;
         border-bottom: 4px solid $dashboard-course-cover-border;
 
@@ -649,19 +649,25 @@
             display: none;
             opacity: 0.0;
           }
+        }
 
-          // STATE: is expanded
-          &.is-expanded {
+        // STATE: is expanded
+        &.is-expanded {
 
-            .ui-toggle-expansion {
-              @include transform(rotate(0));
-              @include transform-origin(50% 50%);
+          .ui-toggle-expansion {
+            @include rtl {
+              @include transform(rotate(-90deg));
             }
 
-            .wrapper-extended {
-              display: block;
-              opacity: 1.0;
+            @include ltr {
+              @include transform(rotate(90deg));
             }
+            @include transform-origin(50% 50%);
+          }
+
+          .wrapper-extended {
+            display: block;
+            opacity: 1.0;
           }
         }
 
@@ -677,19 +683,10 @@
 
             .ui-toggle-expansion {
               @include transition(all $tmg-f2 ease-in-out 0s);
-              @include transform-origin(50% 50%);
               @include font-size(18);
               display: inline-block;
               vertical-align: middle;
               margin-right: ($baseline/4);
-
-              @include rtl {
-                @include transform(rotate(90deg));
-              }
-
-              @include ltr {
-                @include transform(rotate(-90deg));
-              }
             }
 
             .message-copy {
@@ -973,12 +970,12 @@
 
     // "enrolled as" status
     .sts-enrollment {
+      width: flex-grid(3);
       position: absolute;
-      top: 105px;
+      top: 101px;
       @include left(0);
       display: inline-block;
       text-align: center;
-      width: 200px;
 
       .label {
         @extend %text-sr;
